Fix overflow and scrollbar

--- a/ressources/css/display.css
+++ b/ressources/css/display.css
@@ -4,7 +4,24 @@
     padding: 2rem;
     box-shadow: var(--inner-shadow);
     border-radius: .3rem;
+    /* overflow: hidden; */
+    /* direction: rtl; */
+    /* text-overflow: ellipsis; */
 }
+.display #track, .display #display {
+    max-height: calc(var(--font-size) + 1rem);
+    word-break: break-all;
+    overflow-y: scroll;
+    max-width: 100%;
+}
+.display #track::-webkit-scrollbar, .display #display::-webkit-scrollbar {
+    display: none;
+}
+.display #track, .display #display {
+    -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none; 
+}
+
 @media screen and (min-width: 712px) {
     .display {
         height: calc((var(--font-size) * 2) + 2rem);
